syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Poseidon";
option java_package = "poseidon";
option java_multiple_files = true;

service Poseidon {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc GetUserList (google.protobuf.Empty) returns (UserListReply);
    rpc Notice (NoticeRequest) returns (google.protobuf.Empty);
}

message UserListReply {
    repeated UserInfo userInfo = 1;
    int32 total = 2;
}

message UserInfo {
    string uid=1;
    string usn=2;
}

message NoticeRequest {
    string uid=1;
    enum NoticeType {
        Notification = 0;
        MailBox = 1;
        Worry = 2;
    }
    optional NoticeType noticeType = 2;
    int32 noticeCount = 3;
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}